# RaylibUI_ConwayCPP

./: .clang-format  CMakeLists.txt  README.md  main.cpp
GameObjects/: all_objects.txt
GameRules/: all_rules.txt  bosco_2.txt  bosco_3.txt  bosco_4.txt  bosco_default.txt  bosco_interval.txt  bugs.txt  bugs_radius_3.txt  carpet.txt  carpet_2.txt  carpet_3.txt  carpet_4.txt  carpet_5.txt  corals.txt  default.txt  default_100_gen.txt  default_interval.txt  diameba.txt  fades.txt  freestar.txt  globe.txt  inf.txt  lines.txt  liquid_methuseblob_soup.txt  modern_art.txt  modern_art_2.txt  modern_art_3.txt  replicators.txt  spirals.txt  starwars.txt  static.txt  sticks.txt  test.txt  thrill_grill.txt  transersI.txt  transersII.txt  tree.txt  tree_gen.txt
Palettes/: all_palettes.txt
Themes/: all_themes.txt  default.txt  light.txt
src/: controller.cpp  controller.h  field.cpp  field.h  game_colors.cpp  game_colors.h  game_object.cpp  game_objects.cpp  game_objects.h  game_objects_loader.cpp  game_objects_loader.h  game_palette_loader.cpp  game_palette_loader.h  game_rule copy.txt  game_rule copy2.txt  game_rule.cpp  game_rule.h  game_rule_loader.cpp  game_rule_loader.h  stdafx.h  ui.cpp  ui.h  ui_Init_impl.cpp  ui_brush_settings.cpp  ui_brush_settings.h  ui_color_theme.cpp  ui_color_theme.h  ui_elements_store.h  ui_game_object_settings.cpp  ui_game_object_settings.h  ui_textures_loader.cpp  ui_textures_loader.h
src/UI_Tools/: ui_textures_loader.cpp  ui_textures_loader.h  ui_tools.cpp  ui_tools.h
src/UI_elements/: ui_button.cpp  ui_button.h  ui_canvas.cpp  ui_canvas.h  (+40 more)
